--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "jsx": "react",                     
     "jsxFactory": "h",
     "strict": true,                           
-    "esModuleInterop": true                   
+    "esModuleInterop": true,
+    "skipLibCheck": true
   }
 }
